<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TEADUT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="Menu">
        <item>Trang chủ</item>
        <item>Xem thời khóa biểu</item>
        <item>Xem phòng</item>
        <item>Báo nghỉ</item>
        <item>Báo dạy bù</item>
        <item>Đăng nhập</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TKbieu -->
    <string name="headertkb">DANH SÁCH LỚP GIẢNG DẠY</string>
    <string name="headerStt">STT</string>
    <string name="headerLhp">Lớp học phần</string>
    <string name="headerNGAYDAY">Thời khóa biểu</string>
    <string name="headerBaonghi">Báo nghỉ</string>
    <!-- baonghi -->
    <string name="headertbbaongi">DANH SÁCH LỚP BÁO NGHỈ</string>
    <string name="headerngaynghi">Ngày nghỉ</string>
    <string name="headertutiet">Từ tiết</string>
    <string name="headerdentiet">Đến tiết</string>
    <string name="headersotiet">Số tiết</string>
    <string name="headerngaybao">Ngày báo</string>
    <string name="headerSotietnghi">Số tiết nghỉ</string>
    <string name="headerSotietbu">Số tiết bù</string>
    <!-- báo bù -->
    <string name="headerbaobu">DANH SÁCH LỚP BÁO BÙ</string>
    <string name="headerngaybu">Ngày bù</string>
    <string name="headertietdau">Tiết đầu</string>
    <string name="headertietcuoi">Tiết cuối</string>
    <string name="headermaphong">Phòng</string>
    <string name="headerphongs">DANH SÁCH PHÒNG PHÙ HỢP</string>
    <string name="headerTenphong">Tên phòng</string>
     <string name="headerSocho">Số chỗ</string>
     <string name="headerLydo">Lý do</string>
    <!-- comfirm -->
    <string name="cofimbaonghi">Bạn có xác nhận lưu dữ liệu!</string>

    <!-- color -->
     <color name="tieude">#3dbbff</color>
</resources>