<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/lydo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:id="@+id/tableBaonghi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#eaf0f5" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dip"
                    android:layout_span="3"
                    android:background="#eaf0f5"
                    android:text="@string/headertbbaongi"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d0dee9" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dip"
                    android:layout_weight="1"
                    android:background="#eaf0f5"
                    android:text="@string/headerStt"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dip"
                    android:layout_weight="1"
                    android:background="#eaf0f5"
                    android:text="@string/headerLhp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dip"
                    android:layout_weight="1"
                    android:background="#eaf0f5"
                    android:text="@string/headerngaynghi"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dip"
                    android:layout_weight="1"
                    android:background="#eaf0f5"
                    android:text="@string/headersotiet"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btdangkybu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lưu" />

</LinearLayout>