<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
             <TableLayout
                android:id="@+id/danhsachBaobu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#eaf0f5" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#eaf0f5" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="1dip"
                        android:layout_span="4"
                        android:background="#eaf0f5"
                        android:text="@string/headerbaobu"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#d0dee9" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headerStt"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headerLhp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headerngaybu"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headertietdau"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />
                     <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headertietcuoi"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />
                     <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headermaphong"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />
                </TableRow>
            </TableLayout>
            <Button 
                android:id="@+id/btdkBu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Đăng ký bù"
                />
        </LinearLayout>
    </FrameLayout>
    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/drawer_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>