<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/digital_sea_wide_wide" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dip"
                android:background="@color/tieude"
                android:text="@string/headertkb"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/TKbieuBaonghi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#eaf0f5" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#d0dee9" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headerStt"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headerLhp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headerNGAYDAY"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="1"
                        android:background="#eaf0f5"
                        android:text="@string/headerBaonghi"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btbaonghi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@drawable/list_status_button"
                android:onClick="baonghi"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="Báo nghỉ"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </FrameLayout>
    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/drawer_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>